# RiveSharp

./: .gitignore  RiveSharp.sln
.github/workflows/: build.yml  release.yml
docs/: build-and-release-plan.md  build-guides.md  renderer-interop-plan.md  renderer-surface-contracts.md
docs/samples/: avalonia-gpu-rendering.md
dotnet/RiveRenderer/: Enums.cs  Handles.cs  NativeHandles.cs  NativeLibraryLoader.cs  RenderBuffer.cs  Renderer.cs  RendererContext.cs  RendererDevice.cs  RendererFence.cs  RendererMetalSurfaceOptions.cs  RendererSurface.cs  RendererSurfaceOptions.cs  RendererVulkanSurfaceOptions.cs  Structs.cs
dotnet/RiveRenderer.Tests/: RendererBehaviorTests.cs
dotnet/RiveRenderer/Native/: NativeMethods.Buffer.cs  NativeMethods.Fence.cs  NativeMethods.Surface.cs
dotnet/RiveRenderer/runtimes/osx-arm64/native/: librive_renderer_ffi.dylib
renderer_ffi/: CMakeLists.txt
renderer_ffi/build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
renderer_ffi/include/: rive_renderer_ffi.h
renderer_ffi/src/: metal_surface.mm  rive_renderer_ffi.cpp
samples/Avalonia/RiveRenderer.AvaloniaSample/Controls/: RendererHostControl.cs
samples/Avalonia/RiveRenderer.AvaloniaSample/ViewModels/: MainWindowViewModel.cs
samples/Avalonia/RiveRenderer.AvaloniaSample/Views/: MainWindow.axaml
scripts/: build-linux.sh  build-macos.sh  build-windows.ps1  cleanup-runner.sh
